# PersonalAI

./: .gitignore  .gitmodules  README.md  conf.yaml  config_example.yaml  design.txt  launch.py  planning.txt  resources.txt  setup.py  speech.py  todo.txt
ai-manager/: Cargo.toml
ai-manager/src/: device.rs  main.rs  serve.rs  spawn.rs
apps/: audio.py  cli.py  dispatch_daemon.py
apps/common/: logger.py
common/: logger.py  msg.py  plugins.py  protocol.py
conf/: conf.yaml
device-manager/: Cargo.toml
device-manager/src/: alt_device.rs  comm.rs  device.rs  index_handles.rs  indexer.rs  internal.rs  logging.rs  main.rs  message.rs  msg.rs  serve.rs  server.rs  spawn.rs
device-manager/src/servers/: device.rs  mod.rs  node.rs  traits.rs
docs/: architecture.md  errors.txt  launch.md  messages.md  messages.txt  planning.txt  routing.md  todo.txt
experiments/: client.py  speech.py
experiments/rpc/: app_msg_handling_rfc.txt  config_example.yaml  launch.py  schema.json  todo.txt
experiments/rpc/client/: _setup.py  client.py  communication.py  dispatcher.py  plugins.py  protocol.py  python_client_runner.py  setup.py
experiments/rpc/server/: Cargo.toml
experiments/rpc/server/src/: errors.rs  experimental_service.rs  fortune_service.rs  logging.rs  main.rs  protocol.rs  registration_service.rs  rpc_macros.rs
experiments/rpc/server/src/rpc/: dispatch.rs  json.rs  mod.rs  service.rs  types.rs
experiments/rpc/server/src/state/: clients.rs  mod.rs  routing.rs
modalities/: audio.py  cli.py  client.py  loader.py  readme.md  test_cli.py
modalities/common/: logger.py  msg.py
modalities/plugins/: __init__.py
modalities/plugins/audio/: __init__.py
modalities/plugins/cli/: __init__.py
modalities/plugins/dispatch/: __init__.py  config_def.yaml
new_plugins/: dispatch_plugin.py  loader.py  msg.py  plugins.py
rust-deps/filer/: Cargo.toml
rust-deps/filer/src/: main.rs
rust-deps/server/: Cargo.toml
rust-deps/server/src/: comm.rs  lib.rs  spawn.rs
rust-deps/seshat/: Cargo.toml
rust-deps/seshat/src/: crawl.rs  handle.rs  index.rs  lib.rs  main.rs  search.rs
server/: Cargo.toml
server/src/: main.rs
(+23 files in other folders)
