[package]
name = "ai-manager"
version = "0.1.0"
authors = ["Grayson Hooper <ghooper96@gmail.com>"]

[dependencies]
tokio = "0.1.7"
futures = "0.1.21"
# futures = "0.2.1"
serde_json = "1.0.20"

server = { path="../rust-deps/server" }

clap = "2.31.2"
fern = { version = "0.5.5", features = ["colored"] }
chrono = "0.4.3"
log = "0.4.2"
