[package]
name = "device-manager"
version = "0.1.0"
authors = ["Grayson Hooper <ghooper96@gmail.com>"]

[dependencies]
tokio = "0.1.7"
tokio-serde-json = { git = "https://github.com/carllerche/tokio-serde-json" }
futures = "0.1.21"
# futures = "0.2.1"
tokio-io = "0.1.7"
serde_json = "1.0.20"
clap = "2.31.2"
