[package]
name = "device-manager"
version = "0.1.0"
authors = ["Grayson Hooper <ghooper96@gmail.com>"]

[dependencies]
chrono = "0.4.3"
clap = "2.31.2"
fern = { version = "0.5.5", features = ["colored"] }
futures = "0.1.21"
# futures = "0.2.1"
log = "0.4.2"
tokio = "0.1.7"
serde_json = "1.0.20"
walkdir = "2.2.5"

server = { path="../rust-deps/server" }
seshat = { path="../rust-deps/seshat" }
tags = { path="../rust-deps/tags" }
