[package]
name = "server"
version = "0.1.0"
authors = ["Grayson Hooper <ghooper96@gmail.com>"]

[dependencies]
tokio = "0.1.7"
tokio-io = "0.1.7"
futures = "0.1.21"
# futures = "0.2.1"
serde_json = "1.0.20"
tokio-serde-json = { git = "https://github.com/carllerche/tokio-serde-json" }
log = "0.4.2"
tokio-codec = "0.1.1"
