[package]
name = "server"
version = "0.1.0"
authors = ["Grayson Hooper <ghooper96@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.1.22"
tokio-serde = "0.3.0"
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"
tokio-serde-json = "0.2.0"
futures = "0.1.28"
bytes = "0.4.12"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
failure = "0.1.5"
failure_derive = "0.1.5"
clap = "2.33.0"
fern = { version = "0.5.8", features = ["colored"] }
log = "0.4.8"
chrono = "0.4.9"
